# SeleniPiLite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENTS.md  LICENSE  README.md  SECURITY.md  check_env.py  display_backend.py  lunar_pi_astral.py  lunar_pi_skyfield.py  lunar_pi_wip.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
scripts/: epd_busy_probe.py  epd_sanity.py  setup_pi.sh  touch_calibration.py
